--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
 body{
     background-color: #807e7e;
+    width: 100vw;
+    height: 100vh;
+    font-family: 'Mukta', sans-serif;
+    cursor: default;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap');
+
+
 /*************** formulario ********************/
+
+.tituloIndex{
+    font-size: 40px;
+    ;
+}
 
 #formularioLog {
     width: 300px;
@@ -36,16 +54,35 @@ body{
     background-color: #0e0f0f;
 }
 
-/*--------------------------------- pagina princial ----------*/
+/************************ pagina princial ******************************/
 
 .tituloPrincial{
     text-align: center;
     color: black;
-    font-size: 40px;
+    font-size: 70px;
     margin: 100px;
+    margin-top: 250px;
 }
 
-/********************footer************************/
+.tituloDos{
+    font-size: 50px;
+}
+
+.cerrarSesion {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    background-color: #0058fc;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+.cerrarSesion:hover {
+    background-color: black;
+}
+
+/******************** footer ************************/
 
 footer {
     text-align: center;
